# Cinema-Waves

./: .gitignore  README.md  glide.min.js  manage.py  pyproject.toml
actors/: admin.py  models.py  views.py
actors/migrations/: 0001_initial.py  0002_actor_image.py  0003_alter_actor_image.py  0004_alter_actor_image.py  0005_alter_actor_image.py  0006_alter_actor_image.py
assets/assets/: Jerry.jfif  Patrick.jfif  fight_club.jfif  rango.jfif
covid_report/: asgi.py  settings.py  urls.py  wsgi.py
imdb/: asgi.py  settings.py  urls.py  wsgi.py
members/: urls.py
movies/: admin.py  forms.py  models.py  movie_context.py  urls.py  views.py
movies/migrations/: 0001_initial.py  0002_auto_20211005_1755.py  0003_bannercards_cards.py  0004_alter_movie_image.py  0004_auto_20211013_0203.py  0005_alter_movie_image.py  0006_alter_movie_image.py
profiles/: admin.py  folders.py  forms.py  models.py  views.py
profiles/migrations/: 0001_initial.py  0002_auto_20211005_1855.py  0003_alter_user_about.py  0004_alter_user_about.py  0005_user_image.py  0006_remove_user_image.py
reviews/: admin.py  forms.py  models.py  views.py
reviews/migrations/: 0001_initial.py  0002_rename_raiting_review_rating.py  0003_alter_review_rating.py
static/: main.css
static/css/: login.css  user_detail.css
static/js/: app.js
templates/: 500.html  actor_detail.html  actors.html  base.html  create_review.html  home.html  movie_detail.html  movies.html  navbar.html  profiles.html  review_detail.html  user_detail.html
templates/Home/: home.html  search.html
templates/registration/: base.html  (+4 more)
(+2 files in other folders)
