[tool.poetry]
name = "covid-report-app"
version = "0.1.0"
description = ""
authors = ["Capstone Group 11"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.7"
Pillow = "^8.3.2"
django-environ = "^0.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
